documentation/2.0/manual/javaGuide/_Sidebar.md
<!-- translated -->
<!--
### Main concepts
-->
### 基本的な機能

<!-- - [[HTTP programming | JavaActions]]
- [[Asynchronous HTTP programming | JavaAsync]]
- [[The template engine | JavaTemplates]]
- [[HTTP form submission and validation | JavaForms]]
- [[Working with JSON | JavaJson]]
- [[Working with XML | JavaXmlRequests]]
- [[Handling file upload | JavaFileUpload]]
- [[Accessing an SQL database | JavaDatabase]]
- [[Using the Cache | JavaCache]]
- [[Calling web services | JavaWS]]
- [[Integrating with Akka | JavaAkka]]
- [[Internationalization | JavaI18N]]
- [[The application Global object | JavaGlobal]]
- [[Testing your application | JavaTest]] -->
- [[HTTP プログラミング | JavaActions]]
- [[非同期 HTTP プログラミング | JavaAsync]]
- [[テンプレートエンジン | JavaTemplates]]
- [[HTTP によるフォームの送信とバリデーション | JavaForms]]
- [[JSON | JavaJson]]
- [[XML | JavaXmlRequests]]
- [[ファイルアップロード | JavaFileUpload]]
- [[SQL データベースアクセス | JavaDatabase]]
- [[キャッシュ | JavaCache]]
- [[Webサービスの呼び出し | JavaWS]]
- [[Akka の統合 | JavaAkka]]
- [[多言語対応 | JavaI18N]]
- [[Global オブジェクト | JavaGlobal]]
- [[テスト | JavaTest]]

<!--
### Tutorials
-->
### チュートリアル

<!--
- [[Your first application | JavaTodoList]]
-->
- [[はじめてのアプリケーション | JavaTodoList]]