documentation/2.1.2/manual/javaGuide/_Sidebar.md
<!-- ### Main concepts -->
### 主要なコンセプト

<!-- - [[HTTP programming | JavaActions]]
- [[Asynchronous HTTP programming | JavaAsync]]
- [[The template engine | JavaTemplates]]
- [[HTTP form submission and validation | JavaForms]]
- [[Working with JSON | JavaJsonRequests]]
- [[Working with XML | JavaXmlRequests]]
- [[Handling file upload | JavaFileUpload]]
- [[Accessing an SQL database | JavaDatabase]]
- [[Using the Cache | JavaCache]]
- [[Calling web services | JavaWS]]
- [[Integrating with Akka | JavaAkka]]
- [[Internationalization | JavaI18N]]
- [[The application Global object | JavaGlobal]]
- [[Testing your application | JavaTest]] -->
- [[HTTP プログラミング | JavaActions]]
- [[非同期 HTTP プログラミング | JavaAsync]]
- [[テンプレートエンジン | JavaTemplates]]
- [[HTTP フォームの投稿とバリデーション | JavaForms]]
- [[JSON を使う | JavaJsonRequests]]
- [[XML を使う | JavaXmlRequests]]
- [[ファイルアップロード処理 | JavaFileUpload]]
- [[SQL データベースへのアクセス | JavaDatabase]]
- [[キャッシュを使う | JavaCache]]
- [[Web サービスの呼び出し | JavaWS]]
- [[Akka の統合 | JavaAkka]]
- [[国際化 | JavaI18N]]
- [[アプリケーション Global オブジェクト | JavaGlobal]]
- [[アプリケーションのテスト | JavaTest]]

<!-- ### Tutorials -->
### チュートリアル

<!-- - [[Your first application | JavaTodoList]]
- [[Zentask | JavaGuide1]] -->
- [[はじめてのアプリケーション | JavaTodoList]]
- [[Zentask | JavaGuide1]]
